MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/Modon_Receipt_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Modon Receipt Mapping</label>
    <pluralLabel>Modon Receipt Mappings</pluralLabel>
</CustomObject>