MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/Associated_Object__c.field-meta.xml
<CustomField>
    <fullName>Associated_Object__c</fullName>
    <label>Associated Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expression of Interest</fullName>
                <default>true</default>
                <label>Expression of Interest</label>
            </value>
            <value>
                <fullName>Sales Order - Downpayment</fullName>
            </value>
            <value>
                <fullName>Sales Order - Installment</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
                <isActive>false</isActive>
                <label>Sales Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>