MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>