MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>EGP</fullName>
            </value>
            <value>
                <fullName>SAR</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>