MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>