MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
                <default>true</default>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>