MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/Receipt_Method__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Method__c</fullName>
    <label>Receipt Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>