MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/fields/Remittance_Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Bank_Account_No__c</fullName>
    <label>Remittance Bank Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>