MODON MRE BPDEV/force-app/main/default/objects/Modon_Receipt_Mapping__mdt/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Associated_Object__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Receipt_Method__c</columns>
    <columns>Remittance_Bank_Account_No__c</columns>
    <columns>Currency__c</columns>
    <columns>Mode_of_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
</ListView>